rebase, fix user setting changes
