# internal/httpserve/handlers/ent.go
@@ -380,27 +380,27 @@ func (h *Handler) CheckAndCreateUser(ctx context.Context, name, email string, pr
 
 // createUserInput creates a new user input based on the name, email and provider
 func createUserInput(name, email string, provider enums.AuthProvider) ent.CreateUserInput {
-	isOAuthUser := false
-	isWebAuthnAllowed := false
-
-	switch provider {
-	case enums.GitHub:
-		isOAuthUser = true
-	case enums.Google:
-		isOAuthUser = true
-	case enums.Webauthn:
-		isWebAuthnAllowed = true
-	}
-
 	lastSeen := time.Now().UTC()
 
 	// create new user input
 	input := parseName(name)
 	input.Email = email
-	input.Oauth = &isOAuthUser
 	input.AuthProvider = &provider
 	input.LastSeen = &lastSeen
-	input.IsWebauthnAllowed = &isWebAuthnAllowed
 
 	return input
+}
+
+// setWebauthnAllowed sets the user setting field is_webauthn_allowed to true within a transaction
+func (h *Handler) setWebauthnAllowed(ctx context.Context, user *ent.User) error {
+	if _, err := transaction.FromContext(ctx).UserSetting.Update().SetIsWebauthnAllowed(true).
+		Where(
+			usersetting.ID(user.Edges.Setting.ID),
+		).Save(ctx); err != nil {
+		h.Logger.Errorw("error setting webauthn allowed", "error", err)
+
+		return err
+	}
+
+	return nil
 }
